updates and refactor codes for serviceImpl